--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -3,22 +3,77 @@
   flex-direction: column;
   height: 100vh;
   overflow: auto;
-  background-image: url('https://mdn.alipayobjects.com/yuyan_qk0oxh/afts/img/V-_oS6r-i7wAAAAAAAAAAAAAFl94AQBr');
+  background-image: url('../../assets/images/background.png');
   background-size: 100% 100%;
   align-items: center;
   padding-top: 10%;
+  position: relative;
   // text-align: center;
+
+  .nav {
+    background-color: rgba(255, 255, 255, 0.8);
+    width: 100%;
+    height: 80px;
+    position: absolute;
+    top: 0;
+    display: flex;
+    line-height: 80px;
+    .text {
+      font-size: 19px;
+      margin-left: 20px;
+    }
+  }
+  .navLogo {
+    width: 91px;
+    height: 24px;
+    margin: 28px 0 0 20px;
+  }
 
   .loginForm {
     width: 400px;
+    position: absolute;
+    right: 68px;
+    top: 108px;
   }
 
   .title {
     text-align: center;
     font-size: 28px;
     margin-bottom: 50px;
-    font-weight: 600;
+    //font-weight: 600;
     width: 400px;
     text-align: center;
+    p {
+      margin-bottom: 0;
+    }
+  }
+  .loginBox {
+    width: 1044px;
+    height: 555px;
+    position: relative;
+  }
+  .loginImg {
+    background: url('../../assets/images/login.png') no-repeat;
+    background-size: 100% 100%;
+  }
+  .forgotImg {
+    background: url('../../assets/images/forgot.png') no-repeat;
+    background-size: 100% 100%;
+  }
+  .resetPasswordImg {
+    background: url('../../assets/images/reset.png') no-repeat;
+    background-size: 100% 100%;
+  }
+
+  .logo {
+    width: 91px;
+    height: 24px;
+    top: 46px;
+    left: 48px;
+    position: absolute;
+  }
+
+  .siteIcon {
+    color: rgba(0, 0, 0, 0.25);
   }
 }
